JDK9 upgrade and other refactoring works, Happy New Year 2018!